PROJECT(pi C CXX)

INCLUDE_DIRECTORIES(../main)

ADD_EXECUTABLE(y_pi_driver y_pi_driver.cpp)
TARGET_LINK_Y(y_pi_driver)
INSTALL( TARGETS y_pi_driver RUNTIME DESTINATION bin )

FIND_PACKAGE(OpenMP)

IF(OpenMP_C_FOUND)
    ADD_EXECUTABLE(pi pi.c)
    TARGET_LINK_LIBRARIES(pi PUBLIC OpenMP::OpenMP_C)
	
    ADD_EXECUTABLE(pi-ng pi-ng.c)
    TARGET_LINK_LIBRARIES(pi-ng PUBLIC OpenMP::OpenMP_C)
	
    ADD_EXECUTABLE(pi-v2 pi-v2.c)
    TARGET_LINK_LIBRARIES(pi-v2 PUBLIC OpenMP::OpenMP_C)

IF(NOT MSVC)
	TARGET_LINK_LIBRARIES(pi    m)
	TARGET_LINK_LIBRARIES(pi-v2 m)
	TARGET_LINK_LIBRARIES(pi-ng m)
ENDIF(NOT MSVC)

IF(Y_FREEBSD AND Y_CLANG)
	MESSAGE( STATUS "need libatomic" )
	FIND_FILE(LIBATOMIC libatomic.a PATHS /usr/local/lib/gcc9)
	MESSAGE( STATUS "LIBATOMIC=${LIBATOMIC}" )
	TARGET_LINK_LIBRARIES(pi ${LIBATOMIC})
	TARGET_LINK_LIBRARIES(pi-v2 ${LIBATOMIC})
	TARGET_LINK_LIBRARIES(pi-ng ${LIBATOMIC})
ENDIF()


ENDIF(OpenMP_C_FOUND)
